Lagt til søkeboks for tittel i html. Lagt til filter funksjonalitet i js. Søk med komma gir samme resultat som uten komma. Resultatene alfabetiseres.

--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,7 @@ header {
   font-size: 1.5em;
   text-align: center;
   border: none;
+  margin-bottom: 5px;
 }
 
 /* adjust the size of the placeholder text */
